# apache-age-benchmark

./: README.md  compose.yaml  pyproject.toml
benchmarks/: run_all.py  visualize.py
benchmarks/results/: benchmark_20260113_142810.json  benchmark_20260113_142820.json  benchmark_20260113_143409.json  benchmark_20260113_150640.json  benchmark_20260113_150714.json
src/: __init__.py  connection.py  data_generator.py
src/strategies/: __init__.py  protocol.py  s0_individual_merge.py  s1_unwind_merge.py  s2_copy_unwind.py  s3_direct_sql.py
tests/: test_strategies.py
